fix stone of invisibility

--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,7 @@ body {
 }
 
 nav {
+  z-index: 99;
   width: 145px;
   margin: 5px auto 0;
 }
